[package]
name = "lodge"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
thiserror = "1"
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
